# TimeSeries_algorithms

./: .gitignore  README.md
bench/: dtw.py  kNN.py  main.py  plot.py  print_matrix.py  random_test.py
bench/DTW/: dtw.py
bench/data/: AllGestureWiimoteX.txt  TRAIN.txt
bench/results/: dtw_bk.csv  dtw_bk_mem.csv  dtw_diag.csv  dtw_diag_cache.csv  dtw_diag_cache_mem.csv  dtw_diag_par.csv  dtw_diag_par_cache.csv  dtw_diag_par_cache_mem.csv  dtw_fw.csv  dtw_fw_mem.csv  dtw_fwbk.csv  dtw_fwbk_par.csv  dtw_fwbk_par_mem.csv  dtw_prunned.csv
bench/results_random_time_series/: dtw_bk.csv  dtw_bk_mem.csv  dtw_diag.csv  dtw_diag_cache.csv  dtw_diag_cache_mem.csv  dtw_diag_par.csv  dtw_diag_par_cache.csv  dtw_diag_par_cache_mem.csv  dtw_fw.csv  dtw_fw_mem.csv  dtw_fwbk.csv  dtw_fwbk_par.csv  dtw_fwbk_par_mem.csv  dtw_prunned.csv
src/: CMakeLists.txt  dtw.c  main.c
src/algs/: dtw_algs.c  dtw_bk.h  dtw_bk_mem.h  dtw_diag.h  dtw_diag_cache.h  dtw_diag_cache_mem.h  dtw_diag_par.h  dtw_diag_par_cache.h  dtw_diag_par_cache_mem.h  dtw_fw.h  dtw_fw_mem.h  dtw_fwbk.h  dtw_fwbk_par.h  dtw_fwbk_par_mem.h  dtw_pruned.h  dtw_prunned.h  euclidean.h  helpers.h
